Login Form are completed

--- a/Hotel_ManagementIT13/App.config
+++ b/Hotel_ManagementIT13/App.config
@@ -10,6 +10,19 @@
              providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
 
+	<appSettings>
+		<add key="ApplicationName" value="Hotel Management System" />
+		<add key="Version" value="1.0.0" />
+		<add key="CompanyName" value="Hotel Management IT13" />
+		<add key="CheckInTime" value="14:00" />
+		<add key="CheckOutTime" value="12:00" />
+		<add key="DepositPercentage" value="20" />
+		<add key="LateCheckoutFirstHourFee" value="50" />
+		<add key="LateCheckoutAdditionalHourFee" value="25" />
+		<add key="ReportsPath" value="Reports" />
+		<add key="BackupPath" value="Backups" />
+	</appSettings>
+
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
