Partial Reservation Functions

--- a/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
+++ b/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
@@ -253,6 +253,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationContext.cs" />
     <Compile Include="Data\DatabaseHelper.cs" />
     <Compile Include="Data\Managers\BillingManager.cs" />
     <Compile Include="Data\Managers\CheckInManager.cs" />
