--- a/Hotel_ManagementIT13/App.config
+++ b/Hotel_ManagementIT13/App.config
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<configSections>
+		<section name="entityFramework"
+                 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                 requirePermission="false" />
+	</configSections>
+
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
 	</startup>
 
 	<connectionStrings>
 		<add name="HotelDB"
-             connectionString="Server=localhost;Database=hotel_management;Uid=root;Pwd=;Port=3307;"
+             connectionString="Server=localhost;Port=3307;Database=hotel_management;Uid=root;Pwd=;Charset=utf8;"
              providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
 
@@ -39,4 +45,15 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+
+	<!-- ADD THIS SECTION FOR MYSQL CONFIGURATION -->
+	<system.data>
+		<DbProviderFactories>
+			<remove invariant="MySql.Data.MySqlClient" />
+			<add name="MySQL Data Provider"
+                 invariant="MySql.Data.MySqlClient"
+                 description=".NET Framework Data Provider for MySQL"
+                 type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+		</DbProviderFactories>
+	</system.data>
 </configuration>
