--- a/Hotel_ManagementIT13/App.config
+++ b/Hotel_ManagementIT13/App.config
@@ -1,19 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="entityFramework"
-                 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-                 requirePermission="false" />
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 
 	<connectionStrings>
-		<add name="HotelDB"
-             connectionString="Server=localhost;Port=3307;Database=hotel_management;Uid=root;Pwd=;Charset=utf8;"
-             providerName="MySql.Data.MySqlClient"/>
+		<add name="HotelDB" connectionString="Server=localhost;Port=3307;Database=hotel_management;Uid=root;Pwd=;Charset=utf8;" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 
 	<appSettings>
@@ -43,6 +39,10 @@
 				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.IO.Pipelines" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 
@@ -50,10 +50,7 @@
 	<system.data>
 		<DbProviderFactories>
 			<remove invariant="MySql.Data.MySqlClient" />
-			<add name="MySQL Data Provider"
-                 invariant="MySql.Data.MySqlClient"
-                 description=".NET Framework Data Provider for MySQL"
-                 type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+			<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".NET Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
 		</DbProviderFactories>
 	</system.data>
 </configuration>
