--- a/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
+++ b/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
@@ -275,6 +275,7 @@
     <Compile Include="Data\Models\StandardRoom.cs" />
     <Compile Include="Data\Models\Suite.cs" />
     <Compile Include="Data\Models\User.cs" />
+    <Compile Include="Data\Repositories\AmenityRepository.cs" />
     <Compile Include="Data\Repositories\BillingRepository.cs" />
     <Compile Include="Data\Repositories\GuestRepository.cs" />
     <Compile Include="Data\Repositories\PaymentRepository.cs" />
