Updated the functions

--- a/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
+++ b/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
@@ -398,6 +398,9 @@
     <EmbeddedResource Include="Forms\frmRoomManagement.resx">
       <DependentUpon>frmRoomManagement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmSearch.resx">
+      <DependentUpon>frmSearch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmUserManagement.resx">
       <DependentUpon>frmUserManagement.cs</DependentUpon>
     </EmbeddedResource>
