--- a/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
+++ b/Hotel_ManagementIT13/Hotel_ManagementIT13.csproj
@@ -257,25 +257,49 @@
     <Compile Include="Data\DatabaseHelper.cs" />
     <Compile Include="Data\Managers\BedManager.cs" />
     <Compile Include="Data\Managers\BillingManager.cs" />
+    <Compile Include="Data\Managers\ChartService.cs" />
     <Compile Include="Data\Managers\CheckInManager.cs" />
     <Compile Include="Data\Managers\CheckOutManager.cs" />
+    <Compile Include="Data\Managers\ConcreteRoom.cs" />
+    <Compile Include="Data\Managers\DashboardDataService.cs" />
+    <Compile Include="Data\Managers\DatabaseAccessService.cs" />
+    <Compile Include="Data\Managers\DataGridConfigurationService.cs" />
+    <Compile Include="Data\Managers\FormValidationService.cs" />
     <Compile Include="Data\Managers\GuestManager.cs" />
+    <Compile Include="Data\Managers\GuestService.cs" />
+    <Compile Include="Data\Managers\HistoryTabService.cs" />
+    <Compile Include="Data\Managers\MenuService.cs" />
+    <Compile Include="Data\Managers\QuickActionService.cs" />
     <Compile Include="Data\Managers\RateManager.cs" />
     <Compile Include="Data\Managers\ReportManager.cs" />
     <Compile Include="Data\Managers\ReservationManager.cs" />
+    <Compile Include="Data\Managers\ReservationService.cs" />
+    <Compile Include="Data\Managers\RolePermissionService.cs" />
     <Compile Include="Data\Managers\RoomManager.cs" />
+    <Compile Include="Data\Managers\RoomOperationService.cs" />
+    <Compile Include="Data\Managers\RoomService.cs" />
+    <Compile Include="Data\Managers\StatusStripService.cs" />
+    <Compile Include="Data\Managers\UIStateManagementService.cs" />
     <Compile Include="Data\Models\Admin.cs" />
     <Compile Include="Data\Models\BedType.cs" />
     <Compile Include="Data\Models\Billing.cs" />
+    <Compile Include="Data\Models\CheckInOutRecord.cs" />
+    <Compile Include="Data\Models\CheckInResult.cs" />
+    <Compile Include="Data\Models\CheckOutResult.cs" />
     <Compile Include="Data\Models\DeluxeRoom.cs" />
     <Compile Include="Data\Models\FrontDeskStaff.cs" />
     <Compile Include="Data\Models\Guest.cs" />
+    <Compile Include="Data\Models\GuestHistory.cs" />
+    <Compile Include="Data\Models\GuestRegistrationResult.cs" />
+    <Compile Include="Data\Models\GuestSearchResult.cs" />
     <Compile Include="Data\Models\Manager.cs" />
     <Compile Include="Data\Models\Payment.cs" />
     <Compile Include="Data\Models\RateModels.cs" />
     <Compile Include="Data\Models\Reservation.cs" />
     <Compile Include="Data\Models\Room.cs" />
     <Compile Include="Data\Models\RoomBed.cs" />
+    <Compile Include="Data\Models\ServiceModels.cs" />
+    <Compile Include="Data\Models\ServiceResult.cs" />
     <Compile Include="Data\Models\StandardRoom.cs" />
     <Compile Include="Data\Models\Suite.cs" />
     <Compile Include="Data\Models\User.cs" />
@@ -373,6 +397,8 @@
     <Compile Include="Utilities\Helper.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Utilities\ReportHelper.cs" />
+    <Compile Include="Utilities\StatusHelper.cs" />
+    <Compile Include="Utilities\UIHelper.cs" />
     <Compile Include="Utilities\Validator.cs" />
     <EmbeddedResource Include="Forms\frmBilling.resx">
       <DependentUpon>frmBilling.cs</DependentUpon>
